--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,7 @@ h1 {
 picture {
   display: inherit;
   position: relative;
+
 }
 
 .overlay {
@@ -122,7 +123,8 @@ picture {
   right: 0;
   bottom: 0;
 
-  background-color: hsla(277, 64%, 61%, .5);
+  background-color: hsl(277, 64%, 61%);
+  mix-blend-mode: multiply;
 }
 
 
