--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ picture {
   right: 0;
   bottom: 0;
 
-  background-color: hsl(277, 64%, 61%);
+  background-color: hsla(277, 64%, 61%,.9);
   mix-blend-mode: multiply;
 }
 
